Fix link wrapping

--- a/src/styles/hc-2018/ternary.styl
+++ b/src/styles/hc-2018/ternary.styl
@@ -249,7 +249,7 @@ li {
 a {
     color: var(--accent-color);
     text-decoration: none;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 a::after {
     content: " →";
